--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 - model for todo list [X]
-- which strategies to implement []
+- which strategies to implement [X]
 - latex template []
 - finish writing functions []
 	- bielliptic []
 	- lambert []
-- decide standard input []
+- decide standard input [X]
